[User] update swagger for user
